# imova-experiments

./: .gitignore  LICENSE  PythonInstaller.cmd  PythonInstaller.ps1  README.md  imova-experiments.sln  pyproject.toml
.bonsai/: Bonsai.config
Analisys/: LoadData.ipynb
device_configs/: CameraBottomLeft.json  CameraBottomRight.json  CameraCenter.json  CameraLeft.json  CameraRight.json  CameraTop.json  CameraTopLeft.json  CameraTopRight.json
docs/: jarvis.md
schemas/: CameraDevice.schema.json
scripts/: check_videos.py  convert_videos_avi_to_mp4.py  create_devices.py  generate_schemas.py  remove_not_annotated.py
workflows/: 0BonsaiTest.bonsai  1Tablet.bonsai  2Typing.bonsai  3Webcam.bonsai  4Microphone.bonsai  5SitSuppress.bonsai  6SitAlone.bonsai  7CollectIntrinsicsDataset.bonsai  8CollectExtrinsicsDataset.bonsai  9CollectMultiCameraDataset.bonsai  BehaviorBoard.yml  Extensions.csproj  KeyboardTask.bonsai  MicrophoneTask.bonsai  TabletTask.bonsai  TicTask.bonsai  ToLiteral.cs  WebcamTask.bonsai  microphoneSpeech.bonsai  subjectid.csv
workflows/.bonsai/Settings/: 2Typing.editor
workflows/Data/computeMD/keyboard/2025-08-16T10-17-08/: Instructions.csv  keystrokes.csv  text.csv  text_input_start.csv
workflows/Data/computeMD/keyboard/2025-08-16T10-20-25/: Instructions.csv  (+3 more)
workflows/Extensions/: CameraDevice.Schema.Generated.cs  FormatFileName.bonsai  PathPrefix.bonsai  PenDigitizer.bonsai  PenDigitizer.cs  SelectCameraStream.cs  SynchPulse.bonsai  TextBoxAutoFocusBuilder.cs  TextBoxAutoFocusVisualizer.cs  Timestamp.bonsai  ToLiteral.cs  clearCanvas.bonsai
(+151 files in other folders)
