[project]
name = "imova"
version = "0.0.1"
requires-python = "==3.11.9"
description = "A environment for interfacing with acquired data from project imova-experiments."
readme = "README.md"
dependencies = [
  "dotmap",
  "harp-python>=0.3.0",
  "matplotlib",
  "numpy>=1.21.0, <2",
  "matplotlib~=3.7.1",
  "opencv-python~=4.7.0",
  "lxml~=4.9.2",
  "GitPython~=3.1.31",
  "pandas>=1.3"
]
