[project]
name = "imova"
version = "0.1.0"
requires-python = ">=3.14"
description = "A environment for interfacing with acquired data from project imova-experiments."
readme = "README.md"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "opencv-python>=4.13.0.92",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
]
